# Chess-Engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-release.yml
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  ChessEngine_Lilia.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lilia_app.vcxproj  lilia_app.vcxproj.filters  lilia_engine.vcxproj  lilia_engine.vcxproj.filters
build-msvc/lilia_app.dir/Release/: lilia_app.exe.recipe
build-msvc/lilia_app.dir/Release/lilia_app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-msvc/lilia_engine.dir/Release/: lilia_engine.exe.recipe
build-msvc/lilia_engine.dir/Release/lilia_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  lilia_engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-msvc/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
build-msvc/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
examples/: main.cpp
include/: Entity.hpp  bitboard.hpp  board.hpp  constants.hpp  entity.hpp  input_manager.hpp  piece.hpp  piece_color_enum.hpp  piece_type_enum.hpp  test.hpp  texture_manager.hpp  types.hpp
include/Visualization/: entity.hpp  piece.hpp  piece_color.hpp  piece_type.hpp  texture_table.hpp
include/lilia/: chess_types.hpp  constants.hpp  core_types.hpp  player_info.hpp
include/lilia/app/: app.hpp
include/lilia/application/: app.hpp
include/lilia/bot/: bot_info.hpp
include/lilia/controller/: bot_player.hpp  game_controller.hpp  game_manager.hpp  input_manager.hpp  player.hpp  selection_manager.hpp  time_controller.hpp
include/lilia/engine/: bot_engine.hpp  config.hpp  engine.hpp  eval.hpp  eval_acc.hpp  eval_shared.hpp  eval_tune_shared.hpp  lmr_red.hpp  move_buffer.hpp  move_list.hpp  move_order.hpp  search.hpp  texel_tuner.hpp  thread_pool.hpp
include/lilia/model/: board.hpp  chess_game.hpp  evaluation.hpp  fen_validator.hpp  game_state.hpp  magic_serializer.hpp  model_types.hpp  move.hpp  move_generator.hpp  move_helper.hpp  move_validator.hpp  pgn_parser.hpp  position.hpp  tt4.hpp  tt5.hpp  zobrist.hpp
include/lilia/model/core/: bitboard.hpp  magic.hpp  model_types.hpp  random.hpp
include/lilia/uci/: uci.hpp  uci_helper.hpp
include/lilia/view/: board.hpp  board_view.hpp  clock.hpp  color_palette.hpp  color_palette_manager.hpp  cursor_manager.hpp  entity.hpp  eval_bar.hpp  game_view.hpp  highlight_manager.hpp  modal_view.hpp  move_list_view.hpp  particle_system.hpp  piece.hpp  piece_manager.hpp  player_info_view.hpp  promotion.hpp  promotion_manager.hpp  render_constants.hpp  rounded_rectangle_shape.hpp  settings_bar.hpp  start_load_dialog.hpp  start_screen.hpp  start_screen_dialogs.hpp  start_screen_ui.hpp  start_screen_utils.hpp  start_validation.hpp  texture_table.hpp
include/lilia/view/animation/: animation_manager.hpp  chess_animator.hpp  i_animation.hpp  move_animation.hpp  piece_placeholder_animation.hpp  placeholder_animation.hpp  promotion_select_animation.hpp  snap_to_square_animation.hpp  warning_animation.hpp
include/lilia/view/audio/: sound_manager.hpp
include/lilia/view/col_palette/: color_palette.hpp  rose_noir.hpp
include/visuals/: board.hpp  entity.hpp  game_view.hpp  piece.hpp  piece_utils.hpp  texture_table.hpp
src/: board.cpp  entity.cpp  input_manager.cpp  piece.cpp  test.cpp  texture_manager.cpp
src/Visualization/: entity.cpp  piece.cpp
src/lilia/app/: app.cpp
src/lilia/application/: application.cpp
src/lilia/bot/: bot_info.cpp
src/lilia/controller/: bot_player.cpp  game_controller.cpp  game_manager.cpp  input_manager.cpp  time_controller.cpp
src/lilia/engine/: bot_engine.cpp  engine.cpp  eval.cpp  lmr_red.cpp  search.cpp  texel_tuner.cpp
src/lilia/model/: board.cpp  chess_game.cpp  fen_validator.cpp  magic.cpp  magic_serializer.cpp  move_generator.cpp  pgn_parser.cpp  position.cpp  zobrist.cpp
src/lilia/tools/texel/: texel_tuner.cpp
src/lilia/uci/: uci.cpp
src/lilia/view/: board.cpp  board_view.cpp  clock.cpp  color_palette_manager.cpp  cursor_manager.cpp  entity.cpp  eval_bar.cpp  game_view.cpp  highlight_manager.cpp  modal_view.cpp  move_list_view.cpp  particle_system.cpp  piece.cpp  piece_manager.cpp  player_info_view.cpp  promotion.cpp  promotion_manager.cpp  rounded_rectangle_shape.cpp  settings_bar.cpp  start_load_dialog.cpp  start_screen.cpp  start_screen_dialogs.cpp  start_screen_utils.cpp  start_validation.cpp  texture_table.cpp
src/lilia/view/animation/: animation_manager.cpp  chess_animator.cpp  move_animation.cpp  piece_placeholder_animation.cpp  placeholder_animation.cpp  promotion_select_animation.cpp  snap_to_square_animation.cpp  warning_animation.cpp
src/lilia/view/audio/: sound_manager.cpp
src/lilia/view/col_palette/: chess_com.cpp  kintsugi_jade.cpp  rose_noir.cpp  soft_pink.cpp
src/visuals/: board.cpp  entity.cpp  game_view.cpp  piece.cpp  piece_utils.cpp  texture_table.cpp
tests/: tactical_quiet_test.cpp
texel_data/: texel_dataset.txt  texel_weights.txt  texel_weights_overnight_2025-10-02.txt
tools/: tune.cpp  tune.py
